--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "예니"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "개발자가 되어가는 중"
+  bio              : "공부하는 중"
   location         : "South Korea"
   email            :
   links:
