--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
      url: https://dpdms529.github.io/about/
    - title: "Category"
      url: https://dpdms529.github.io/categories
-   - title: "Category"
+   - title: "Tag"
      url: https://dpdms529.github.io/tags
   # - title: "Sample Posts"
   #   url: /year-archive/
