--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : # true, false (default)
+search                   : true # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
@@ -105,7 +105,7 @@ author:
   name             : "예니"
   avatar           : "/assets/images/옴팡이.png"
   bio              : "공부하는 중"
-  location         : "South Korea"
+  location         : "Seoul,Korea"
   email            :
   links:
     - label: "Email"
@@ -284,7 +284,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: # true
       share: true
       related: true
