--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Study with Yenny"
+title                    : "Study With Yenny"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "예니"
@@ -298,5 +298,5 @@ defaults:
       author_profile: true
       read_time: false
       comments: # true
-      share: true
+      share: false
       related: false
