--- a/_config.yml
+++ b/_config.yml
@@ -286,7 +286,7 @@ defaults:
       author_profile: true
       read_time: false
       comments: # true
-      share: 
+      share: false
       related: true
       
   # _pages
