--- a/_config.yml
+++ b/_config.yml
@@ -277,6 +277,14 @@ compress_html:
 
 # Defaults
 defaults:
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"
+
   # _posts
   - scope:
       path: ""
@@ -288,8 +296,6 @@ defaults:
       comments: true
       share: false
       related: true
-      sidebar:
-        nav: "docs"
       
   # _pages
   - scope:
