--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@ docs:
       - title: "솔크뿌"
         url: /algorithm/솔크뿌/
       - title: "이론"
-        url: /algorithm/이름/
+        url: /algorithm/이론/
   - title: DB
     url: /db/
     children:
