--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
    - title: "About"
      url: https://dpdms529.github.io/about/
-   - title: "Category"
-     url: https://dpdms529.github.io/categories
+  #  - title: "Category"
+  #    url: https://dpdms529.github.io/categories
    - title: "Tag"
      url: https://dpdms529.github.io/tags
   # - title: "Sample Posts"
