--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,10 +35,10 @@ docs:
         url: /algorithm/솔크뿌/
       - title: "이론"
         url: /algorithm/이론/
-  - title: PL
-    url: /pl/
+  - title: Programming
+    url: /programming/
     children:
-      - title: "JAVA"
+      - title: "Java"
         url: /pl/java/
   - title: ETC
     url: /etc/
