--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,11 +37,13 @@ docs:
         url: /algorithm/솔크뿌/
       - title: "이론"
         url: /algorithm/이론/
-  - title: Programming
-    url: /programming/
+  - title: CS
+    url: /cs/
     children:
       - title: "Java"
-        url: /programming/java/
+        url: /cs/java/
+      - title: "AI"
+        url: /cs/ai/
   - title: ETC
     url: /etc/
     children:
