--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url:  ""https://github.com/dpdms529""
+      url:  "https://github.com/dpdms529"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
