--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -32,6 +32,5 @@ jobs:
 
       - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
 
-        with:                                # Some relative inputs of your action
-
-          token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
