--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: actions/cache@v2
 
@@ -32,5 +32,6 @@ jobs:
 
       - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
 
-        env:
-          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
+        with:
+          token: ${{ secrets.JEKYLL_PAT }}
+          pre_build_commands: 'gem update --system'
