--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -33,5 +33,7 @@ jobs:
       - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
 
         with:
-          token: ${{ secrets.JEKYLL_PAT }}
           pre_build_commands: 'gem update --system'
+
+        env:
+          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
