--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,37 +1,23 @@
 name: Build and deploy Jekyll site to GitHub Pages
 
 on:
-
   push:
-
     branches:
-
       - main # or master before October 2020
 
 jobs:
-
   github-pages:
-
     runs-on: ubuntu-latest
-
     steps:
-
       - uses: actions/checkout@v3
-
       - uses: actions/cache@v2
-
         with:
-
           path: vendor/bundle
-
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-
           restore-keys: |
-
             ${{ runner.os }}-gems-
-
       - uses: helaili/jekyll-action@2.0.5    # Choose any one of the Jekyll Actions
-
-        env:
-          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
+        with:                                # Some relative inputs of your action
+          token: ${{ secrets.JEKYLL_PAT }}
+          target_branch: 'gh-pages'
           pre_build_commands: 'gem update --system'
