--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,3 +33,5 @@ categories:
         url: "/experiences/대학-생활/"
       - title: "GS 리테일 인턴"
         url: "/experiences/gs-리테일-인턴/"
+      - title: "Jekyll 블로그"
+        url: "/experiences/Jekyll-블로그/"
