--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,4 +34,4 @@ categories:
       - title: "GS 리테일 인턴"
         url: "/experiences/gs-리테일-인턴/"
       - title: "Jekyll 블로그"
-        url: "/experiences/Jekyll-블로그/"
+        url: "/experiences/jekyll-블로그/"
