--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -18,6 +18,6 @@ jobs:
             ${{ runner.os }}-gems-
       - uses: helaili/jekyll-action@2.5.0    # Choose any one of the Jekyll Actions
         with:                                # Some relative inputs of your action
-          token: ${{ secrets.JEKYLL_PAT }}
+          token: ${{ secrets.JEKYLL_TOKEN }}
           target_branch: 'gh-pages'
           pre_build_commands: 'gem update --system'
